--- a/photosPage.css
+++ b/photosPage.css
@@ -8,8 +8,7 @@
 :root {
     --bg_color: #FFF7F2;
     --text_font: 'Montserrat', sans-serif;
-    --text_color: #1C1203;
-    --title_color: #3D2B1F;
+    --text_color: #3D2B1F;
     --button_color: #F8BCA3;
     --light_pink: #FFECEA;
     --card_bg: #FFCDC8;
@@ -22,7 +21,6 @@ body {
     font-family: var(--text_font);
     display: grid;
     gap: 3em;
-    color: var(--text_color);
 }
 
 header {
@@ -31,16 +29,6 @@ header {
     justify-content: space-between;
     padding: 2.6em 6em 2.6em 4em;
 }
-
-/* .nav-area{
-    display: flex;
-    justify-content: center;
-    width: 40em;
-    height: 4.5em;
-    border-radius: 3em;
-    background-color: var(--white);
-    gap: 2em;
-} */
 main {
     display: grid;
     justify-content: center;
@@ -64,18 +52,18 @@ main {
     width: 30em;
     display: grid;
     gap: 4em;
-
 }
 
 .text h1 {
-    color: var(--title_color);
     font-size: 2.6em;
     font-weight: 800;
+    color: var(--text_color);
 }
 
 .text h3 {
     width: 18em;
     font-weight: 600;
+    color: var(--text_color);
 }
 
 .text button {
@@ -128,4 +116,45 @@ main {
     height:  30.25em;
     border-radius: 1em;
     background-color: var(--pink);
+    display: grid;
+    padding-inline: 4em;
+    padding-top: 4em;
+    gap: 4em;
+}
+.card_content h4{
+    width: 20em;
+    font-size: 1.5em;
+    color: var(--text_color);
+    font-weight: 400;
+}
+.card_reactions{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.card_reactions button{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-inline: 2em;
+    width: 15em;
+    height: 3em;
+    background-color: #FFF7F2;
+    border: none;
+    border-radius: 1em;
+    font-weight: 600;
+    font-size: 1em;
+    color: var(--title_color);
+    cursor: pointer;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+}
+.card_reactions button:hover{
+    background-color: var(--button_color);
+    transform: translateY(-0.125em);
+}
+.reactions{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2em;
 }
