--- a/photosPage.css
+++ b/photosPage.css
@@ -1,160 +1,147 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-}
-
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      text-decoration: none;
+  }
 :root {
-    --bg_color: #FFF7F2;
-    --text_font: 'Montserrat', sans-serif;
-    --text_color: #3D2B1F;
-    --button_color: #F8BCA3;
-    --light_pink: #FFECEA;
-    --card_bg: #FFCDC8;
-    --pink: #FFE4E1;
-    --white: #FFFEFE;
-}
-
+      --bg_color: #FFF7F2;
+      --button_color: #F8BCA3;
+      --card_bg: #FFCDC8;
+      --light_pink: #FFECEA;
+      --pink: #FFE4E1;
+      --text_color: #3D2B1F;
+      --text_font: 'Montserrat', sans-serif;
+      --white: #FFFEFE;
+  }
 body {
-    background-color: var(--bg_color);
-    font-family: var(--text_font);
-    display: grid;
-    gap: 3em;
-}
-
+      background-color: var(--bg_color);
+      display: grid;
+      font-family: var(--text_font);
+      gap: 3em;
+  }
 header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 2.6em 6em 2.6em 4em;
-}
+      align-items: center;
+      display: flex;
+      justify-content: space-between;
+      padding: 2.6em 6em 2.6em 4em;
+  }
 main {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    gap: 12em;
-}
-
+      align-items: center;
+      display: grid;
+      gap: 12em;
+      justify-content: center;
+  }
 .welcome-message {
-    height: 30.5em;
-    width: 80.8em;
-    background-color: var(--pink);
-    border-radius: 3.125em;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-inline: 3em;
-}
-
+      align-items: center;
+      background-color: var(--pink);
+      border-radius: 3.125em;
+      display: flex;
+      height: 30.5em;
+      justify-content: space-between;
+      padding-inline: 3em;
+      width: 80.8em;
+  }
 .text {
-    text-align: justify;
-    width: 30em;
-    display: grid;
-    gap: 4em;
-}
-
+      display: grid;
+      gap: 4em;
+      text-align: justify;
+      width: 30em;
+  }
 .text h1 {
-    font-size: 2.6em;
-    font-weight: 800;
-    color: var(--text_color);
-}
-
+      color: var(--text_color);
+      font-size: 2.6em;
+      font-weight: 800;
+  }
 .text h3 {
-    width: 18em;
-    font-weight: 600;
-    color: var(--text_color);
-}
-
+      color: var(--text_color);
+      font-weight: 600;
+      width: 18em;
+  }
 .text button {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-inline: 2em;
-    width: 15em;
-    height: 3em;
-    background-color: #FFF7F2;
-    border: none;
-    border-radius: 1em;
-    font-weight: 600;
-    font-size: 1em;
-    color: var(--title_color);
-    cursor: pointer;
-    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-}
-
+      align-items: center;
+      background-color: #FFF7F2;
+      border: none;
+      border-radius: 1em;
+      color: var(--title_color);
+      cursor: pointer;
+      display: flex;
+      font-size: 1em;
+      font-weight: 600;
+      height: 3em;
+      justify-content: space-between;
+      padding-inline: 2em;
+      transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+      width: 15em;
+  }
 .button_message {
-    padding-left: 20em;
-}
-
+      padding-left: 20em;
+  }
 .text button:hover {
-    background-color: var(--button_color);
-    transform: translateY(-0.125em);
-}
-.card_container{
-    position: relative;
-}
+      background-color: var(--button_color);
+      transform: translateY(-0.125em);
+  }
 .cardDecoration{
-    position: absolute;
-    margin-top: -6.6em;
-    z-index: 1;
-}
-
+      margin-top: -6.6em;
+      position: absolute;
+      z-index: 1;
+  }
 .card {
-    position: absolute;
-    background-color: var(--card_bg);
-    width: 80.3em;
-    height: 33.5em;
-    border-radius: 1em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2em;
-}
+      align-items: center;
+      background-color: var(--card_bg);
+      border-radius: 1em;
+      display: flex;
+      gap: 2em;
+      height: 33.5em;
+      justify-content: center;
+      position: relative;
+      width: 80.3em;
+  }
+  .card img{
+    border-radius: 2em;
+    max-width: 476px;
+  }
 .card_content{
-    width: 45.1875em;
-    height:  30.25em;
-    border-radius: 1em;
-    background-color: var(--pink);
-    display: grid;
-    padding-inline: 4em;
-    padding-top: 4em;
-    gap: 4em;
-}
+      background-color: var(--pink);
+      border-radius: 1em;
+      display: grid;
+      gap: 4em;
+      height:  30.25em;
+      padding-inline: 4em;
+      padding-top: 4em;
+      width: 45.1875em;
+  }
 .card_content h4{
-    width: 20em;
-    font-size: 1.5em;
-    color: var(--text_color);
-    font-weight: 400;
-}
-.card_reactions{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.card_reactions button{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-inline: 2em;
-    width: 15em;
-    height: 3em;
-    background-color: #FFF7F2;
-    border: none;
-    border-radius: 1em;
-    font-weight: 600;
-    font-size: 1em;
-    color: var(--title_color);
-    cursor: pointer;
-    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-}
-.card_reactions button:hover{
-    background-color: var(--button_color);
-    transform: translateY(-0.125em);
-}
-.reactions{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 2em;
-}
+      color: var(--text_color);
+      font-size: 1.5em;
+      font-weight: 400;
+      width: 20em;
+  }
+.card_reaction{
+      align-items: center;
+      display: flex;
+      justify-content: space-between;
+  }
+.card_reaction button{
+      align-items: center;
+      background-color: #FFF7F2;
+      border: none;
+      border-radius: 1em;
+      color: var(--title_color);
+      cursor: pointer;
+      display: flex;
+      font-size: 1em;
+      font-weight: 600;
+      height: 3em;
+      justify-content: space-between;
+      padding-inline: 2em;
+      transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+      width: 15em;
+  }
+.card_reaction button:hover{
+      background-color: var(--button_color);
+      transform: translateY(-0.125em);
+  }
+a {
+       color: inherit;
+   } 
